# Promachos

./: Cargo.toml  LICENSE  Makefile  Promachos.py  Promachos2.py  README.md  testffi.py
gpio_rust/: Cargo.toml
gpio_rust/src/: lib.rs
install/: 00-vimscript.sh  01opt-dockerscript.sh  01opt-pipscript.sh  02-tensorflowscript.sh  03-opencvscript.sh  04-protobuf.sh  04-protobufscript.sh  roughscript.sh
promachosffi/: Cargo.toml
promachosffi/src/: lib.rs
src/: gpio_leds.rs  gpio_motors.rs  lib.rs
timetests/: 00-vimtime.sh  01-dockertime.sh
